fix: icons alignment

--- a/css/settings.css
+++ b/css/settings.css
@@ -2591,6 +2591,9 @@ li.draggable-item .components-panel__body-toggle.components-button{
 	border-bottom: 0;
     padding: 24px 0 0;
 }
+span.dashicons {
+	line-height: 1.3;
+}
 @-webkit-keyframes spin { 
     100% { -webkit-transform: rotate(360deg); } 
 }
